# django-example

./: .gitignore  Makefile  manage.py  pyproject.toml  setup.cfg
.devcontainer/: devcontainer.json
apps/account/: forms.py  urls.py  views.py
apps/chat/: consumers.py  urls.py  views.py
apps/core/: middlewares.py  models.py
apps/entry/: apps.py  urls.py  views.py
apps/post/: forms.py  models.py  rules.py  urls.py  views.py
apps/post/migrations/: 0001_initial.py
apps/user/: admin.py  models.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py  0002_user_groups_user_user_permissions_and_more.py  0003_user_is_staff.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: common.py  local.py  production.py
docker/: docker-compose.dev.yml  docker-compose.prod.yml  entrypoint.sh
docker/django/: Dockerfile
docker/nginx/: Dockerfile  default.conf
templates/: base.html
templates/account/: signin.html  signup.html
templates/entry/: home.html  index.html
templates/post/: delete.html  detail.html  form.html  list.html
